## Change history

### [2019/08/16]
* (fixed) When a Block is created form a DxfDocument or DXF file, any Hatch entity that it may contain will have its associative property set to false.
          This will avoid problems when the same entity its associated to multiple hatches, or when any of any of its paths is defined by the intersection of several entities.
* (fixed) When cloning (Clone) a Hatch entity its associative property will be set to false, to avoid problems when the same entity its associated to multiple hatches.
* (fixed) When transforming (TransformBy) a Hatch entity its associative property will be set to false, to avoid problems when the same entity its associated to multiple hatches.

### [2019/08/12]
* (fixed) Fixed a few issues with the tolerances display method in the dimension style and its equivalent override. 

### [2019/07/01]
* Added Swap method to the MathHelper class.
* (fixed) Issue with LinearDimension entities related to its rotation, when the were loaded from a DXF file.
* (fixed) Comment in TextVerticalPlacement property of the DimensionStyle class, the default value is Centered not Above.


### [2.3.0 - 2019/06/23]
* Added Matrix2 struct.
* Added Matrix4 struct.
* Added Vector4 struct.
* Added property IsIdentity to Matrix3. This will allow to avoid unnecessary multiplications during transformations.
* Added TransformBy method that takes a Matrix4 (transformation, column major convention) as argument to the EntityObject class.
* Added TransformBy method that takes a Matrix3 (rotation and scale, column major convention) and a Vector3 (translation) as arguments to the EntityObject class.
* Added Explode method to Insert entity. A few entities might not appear as expected when a non-uniform and/or negative scaling is applied, read the TransformBy method documentation of each entity.
* Added Explode method to MLine entity. It will convert the actual MLine to its Line and Arcs components.